--- a/scribalizer/render/index.html
+++ b/scribalizer/render/index.html
@@ -6,6 +6,7 @@
     <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
     <script language="javascript" src="libraries/p5.dom.js"></script>
     <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
+    <script language="javascript" type="text/javascript" src="callbacks.js"></script>
     <script language="javascript" type="text/javascript" src="draw.js"></script>
     <style> body {padding: 0; margin: 0; background: #000000; overflow-x:hidden; overflow-y: hidden} </style>
   </head>
